--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,46 @@
+# Dependencies
 node_modules
+package-lock.json
+
+# Build
 build
 coverage
+
+# Environment
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+test_output.txt
+
+# Tor
 hidden_services
+
+# Data
+**/data/*
+!**/data/.gitkeep
+
+# Docker
+.docker
+docker-compose.override.yml
+
+# Test results
+test-results-summary.md
+test-summary.md
+
+# OS specific
 .DS_Store
+Thumbs.db
+
+# IDE
 .idea/
 .vscode/
+*.swp
+*.swo
