--- a/tortalk/package.json
+++ b/tortalk/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
@@ -29,12 +30,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:second": "PORT=3002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:all": "react-scripts test --watchAll=false",
-    "eject": "react-scripts eject",
-    "server": "node server/index.js"
+    "test:docker": "node docker-test.js",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
